--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "server.ts",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
-    "build":"tsc"
+    "install": "npm install",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
